--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 
 <!DOCTYPE html>
 
@@ -29,8 +30,7 @@
                     {% csrf_token %}
                     <div class="row">
                         <div class="container center">
-                            <h3 class='center'>Your total budget is: <span style="color:green;">{{budget}}</span> Rupees</h3>
-                            <h3 clas='center'>You've spent a total of : <span style="color:red;">{{expenses}}</span> dollars</h3>
+                            <h3 class='center'>You've spent a total of Rs. <span style="color:rgb(4, 95, 180);">{{expenses|intcomma}}</span></h3>
                             <br>
                             <br>
                             <div class="input-field col s3">
@@ -81,24 +81,83 @@
                         </table>
                     </div>
                     <div class="col s6">
-                        <img class='responsive-img' src= "{% static 'budget_app/expense.jpg' %}">
+                        <canvas id="expenses_graph" height="400px" style="width: 100%;"></canvas>
+
+                        <p><b>Select graph type:</b></p>
+                        <div style="display: flex;" data-trigger="get_expenses">
+                            <button style="margin-right: 10px;" class="btn waves-effect waves-light" type="submit" name="action" data-val="line">Line Graph
+                            </button>
+
+                            <button style="margin-right: 10px;" class="btn waves-effect waves-light" type="submit" name="action" data-val="bar">Bar Graph
+                            </button>
+
+                            <button class="btn waves-effect waves-light" type="submit" name="action" data-val="radar">Radar Graph
+                            </button>
+                        </div>
                     </div>
                 </div>
         </div>
-
-            
         </div>
 
-
+        <footer>
+            <p style="text-align: center; color: gray;">Made possible by <b>Vinayak J</b> and <b>Akhil K</b></p>
+        </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
         <script type="text/javascript">
             document.addEventListener('DOMContentLoaded', function() {
                 var elems = document.querySelectorAll('.datepicker');
                 var instances = M.Datepicker.init(elems, {format:'yyyy-mm-dd'});
             });
         </script>
-    </body>
 
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+        <script>
+            let get_expenses_graph = function(graph_type="bar") {
+                $.ajax({
+                    url: "/get_expenses_graph",
+                    type: "POST",
+                    data: {
+                        "csrfmiddlewaretoken": $("input[name='csrfmiddlewaretoken']").val(),
+                    },
+                    success: function(response) {
+                        console.log(response);
+                        var ctx = document.getElementById('expenses_graph').getContext('2d');
+                        var myChart = new Chart(ctx, {
+                            type: graph_type,
+                            data: {
+                                labels: response['days'],
+                                datasets: [{
+                                    label: 'Daily Expenditures',
+                                    data: response['expenditures'],
+                                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                    borderColor: 'rgba(255, 99, 132, 1)',
+                                    borderWidth: 1
+                                }]
+                            },
+                            options: {
+                                scales: {
+                                    yAxes: [{
+                                        ticks: {
+                                            beginAtZero: true
+                                        }
+                                    }]
+                                }
+                            }
+                        });
+                    }
+                })
+            };
+
+            get_expenses_graph("line");
+
+            $('div[data-trigger="get_expenses"]').on("click", function(e) {
+                let $this = $(e.target)
+                    , graph_type = $this.attr("data-val")
+                ;
+                get_expenses_graph(graph_type);
+            });
+        </script>
+    </body>
 </html>
