--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -72,7 +72,7 @@
                                 {% for expense_item in expense_items %}
                                 <tr>
                                     <td>{{ expense_item.expense_name }}</td>
-                                    <td>{{ expense_item.cost }}</td>
+                                    <td>{{ expense_item.cost|intcomma }}</td>
                                     <td>{{ expense_item.date_added}}</td>
                                     <td></td>
                                 </tr>
